versions/v2.8/modules/en/pages/observability/istio/guides/enable-istio-in-cluster.adoc
= Enable Istio in the Cluster
:revdate: 2024-09-26
:page-revdate: {revdate}

[NOTE]
.Prerequisites:
====

* Only a user with the `cluster-admin` https://kubernetes.io/docs/reference/access-authn-authz/rbac/#user-facing-roles[Kubernetes default role] assigned can configure and install Istio in a Kubernetes cluster.
* If you have pod security policies, you will need to install Istio with the CNI enabled. For details, see xref:observability/istio/configuration/pod-security-policies.adoc[this section.]
* To install Istio on an RKE2 cluster, additional steps are required. For details, see xref:observability/istio/configuration/install-istio-on-rke2-cluster.adoc[this section.]
* To install Istio in a cluster where project network isolation is enabled, additional steps are required. For details, see xref:observability/istio/configuration/project-network-isolation.adoc[this section.]
====


. Click *☰ > Cluster Management*.
. Go to the where you want to enable Istio and click *Explore*.
. Click *Apps*.
. Click *Charts*.
. Click *Istio*.
. If you have not already installed your own monitoring app, you will be prompted to install the rancher-monitoring app. Optional: Set your Selector or Scrape config options on rancher-monitoring app install.
. Optional: Configure member access and xref:observability/istio/cpu-and-memory-allocations.adoc[resource limits] for the Istio components. Ensure you have enough resources on your worker nodes to enable Istio.
. Optional: Make additional configuration changes to values.yaml if needed.
. Optional: Add further resources or configuration via the xref:observability/istio/configuration/configuration.adoc#_overlay_file[overlay file].
. Click *Install*.

*Result:* Istio is installed at the cluster level.

== Additional Config Options

For more information on configuring Istio, refer to the xref:observability/istio/configuration/configuration.adoc[configuration reference.]
