versions/v2.10/modules/en/pages/observability/istio/guides/enable-istio-in-cluster.adoc
= Enable Istio in the Cluster
:page-languages: [en, zh]
:revdate: 2025-08-18
:page-revdate: {revdate}
:community-path: how-to-guides/advanced-user-guides/istio-setup-guide/enable-istio-in-cluster.adoc 
:product-path: observability/istio/guides/enable-istio-in-cluster.adoc
ifeval::["{build-type}" != "community"]
:xref-istio-cpu-memory-allocations: xref:observability/istio/cpu-and-memory-allocations.adoc
:xref-istio-on-rke2: xref:observability/istio/configuration/install-istio-on-rke2-cluster.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-istio-cpu-memory-allocations: xref:integrations-in-rancher/istio/cpu-and-memory-allocations.adoc
:xref-istio-on-rke2: xref:integrations-in-rancher/istio/configuration-options/install-istio-on-rke2-cluster.adoc
endif::[]

[NOTE]
.Prerequisites:
====

* Only a user with the `cluster-admin` https://kubernetes.io/docs/reference/access-authn-authz/rbac/#user-facing-roles[Kubernetes default role] assigned can configure and install Istio in a Kubernetes cluster.
* To install Istio on an RKE2 cluster, additional steps are required. For details, see {xref-istio-on-rke2}[this section.]
* To install Istio in a cluster where project network isolation is enabled, additional steps are required. For details, see xref:observability/istio/configuration/project-network-isolation.adoc[this section.]
====


. Click *☰ > Cluster Management*.
. Go to the where you want to enable Istio and click *Explore*.
. Click *Apps*.
. Click *Charts*.
. Click *Istio*.
. If you have not already installed your own monitoring app, you will be prompted to install the rancher-monitoring app. Optional: Set your Selector or Scrape config options on rancher-monitoring app install.
. Optional: Configure member access and {xref-istio-cpu-memory-allocations}[resource limits] for the Istio components. Ensure you have enough resources on your worker nodes to enable Istio.
. Optional: Make additional configuration changes to values.yaml if needed.
. Optional: Add further resources or configuration via the xref:observability/istio/configuration/configuration.adoc#_overlay_file[overlay file].
. Click *Install*.

*Result:* Istio is installed at the cluster level.

== Additional Config Options

For more information on configuring Istio, refer to the xref:observability/istio/configuration/configuration.adoc[configuration reference.]
